--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "expo": "~46.0.9",
+    "expo-file-system": "~14.1.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "12.3.0",
-    "expo-file-system": "~14.1.0"
+    "@react-native-community/datetimepicker": "6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
