--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.2.0",
     "expo": "~46.0.9",
+    "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
+    "expo-module-scripts": "^2.1.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "12.3.0",
-    "@react-native-community/datetimepicker": "6.2.0"
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
