--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo-module-scripts": "^2.1.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "expo-web-browser": "~11.0.0",
+    "expo-auth-session": "~3.7.1",
+    "expo-random": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
