--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "6.2.0",
     "expo": "~46.0.9",
+    "expo-auth-session": "~3.7.1",
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
+    "expo-linking": "~3.2.2",
     "expo-module-scripts": "^2.1.1",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "expo-web-browser": "~11.0.0",
-    "expo-auth-session": "~3.7.1",
-    "expo-random": "~12.3.0"
+    "react-native-webview": "11.23.0",
+    "expo-intent-launcher": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
